# wowice

./: .project  ProjectHome.md
WoWICE/: .project  INSTALL  Makefile.am  build.xml  make_precompiled_header_debug.sh  rebuild.sh
WoWICE/configs/: logon.conf  realms.conf  world.conf  wowice-optional.conf  wowice-world.conf
WoWICE/configs/Without-definitions/: wowice-optional.conf
WoWICE/extras/Spell_to_sql/: spell_to_sqlVC71.vcproj  spell_to_sqlVC90.vcproj
WoWICE/extras/map_extractor/: adt.cpp
WoWICE/extras/mpqe_cpp/: extractdbc.bat
WoWICE/extras/pktdec/: Opcodes.h
WoWICE/extras/spellfailure_extractor/: spellfailure_extractor.sln
WoWICE/extras/wowice-windows-libraries/: README.txt
WoWICE/m4/: 2834_logon_structure.sql  3325_character_structure.sql
WoWICE/sql/: 2834_character_structure.sql  2840_world_structure.sql  3387_character_structure.sql  3464_world_structure.sql
WoWICE/sql/utilities/: WoWICE DB Updater Test.bat  WoWICE DB Updater.bat
WoWICE/sql/world_updates/: 3021_revert.sql
WoWICE/src/collision/: LocationVector.h
WoWICE/src/scripts/: LUA_ENGINE_COMMANDS.txt  scripts2008.sln
WoWICE/src/scripts/src/ExtraScripts/: Insta80.cpp  Makefile.am  Portals.cpp  PvPToken.cpp  Setup.cpp  Setup.h  Unstuck.cpp
WoWICE/src/scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Gossip_BoreanTundra.cpp  Gossip_Guard.cpp  Gossip_Innkeepers.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_Shattrath.cpp  Gossip_Stormwind.cpp  Gossip_Tanaris.cpp  Gossip_Teldrassil.cpp  Gossip_Theramore.cpp  Gossip_Trainer.cpp  Gossip_Wotlk.cpp  Gossip_WyrmrestTemple.cpp  Gossip_XpEliminator.cpp  Makefile.am  Setup.cpp  Setup.h
WoWICE/src/scripts/src/MiscScripts/: Creatures.cpp  DarkmoonFaireObjects.cpp  EbonHold.cpp  GameObjectTeleportTable.cpp  GameObjects.cpp  Makefile.am  QuelDanasPortal.cpp  RandomScripts.cpp  Setup.cpp  Setup.h
WoWICE/src/scripts/src/SpellHandlers/: DeathKnightSpells.cpp  HunterSpells.cpp  ItemSpells_1.cpp  Makefile.am  PaladinSpells.cpp  PetAISpells.cpp  PriestSpells.cpp  QIspells.cpp  RogueSpells.cpp  Setup.cpp  Setup.h  ShamanSpells.cpp  WarlockSpells.cpp  WarriorSpells.cpp
WoWICE/src/wowice-crashreport/: Main.c  Makefile.am
WoWICE/src/wowice-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.h  LogonConsole.cpp  LogonOpcodes.h  Main.cpp  Main.h  Makefile.am
WoWICE/src/wowice-realmserver/: ClientManager.cpp  LogonCommHandler.h  Makefile.am  Master.cpp  Master.h  Structures.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.h
WoWICE/src/wowice-shared/: Array.h  AuthCodes.h  ByteBuffer.h  CThreads.h  CallBack.h  Common.h  CoreMemoryAllocator_Core.cpp  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  Log.cpp  Log.h  MapFile.cpp  MapFileEntry.h  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  NGLog.h  PacketLog.cpp  PacketLog.h  PreallocatedQueue.h  Singleton.h  StackBuffer.h  StackTrace.cpp  StackWalker.cpp  Storage.h  TextFile.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  crc32.cpp  crc32.h  printStackTrace.cpp  svn_revision.h  wowice_getopt.cpp  wowice_getopt.h
WoWICE/src/wowice-voicechat/: configfile.c  launcher.c  mutex.c  network.h  network_handlers.c  network_unixkqueue.c  network_win32.c  voice_channel.h  wowice_socket.c
WoWICE/src/wowice-world/: AIInterface.cpp  AIInterface.h  AchievementMgr.cpp  AchievementMgr.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  BaseConsole.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  CellHandler.h  Channel.cpp  Channel.h  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CollideInterface.h  CombatHandler.cpp  CommonScheduleThread.h  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleListener.cpp  Container.cpp  Corpse.cpp  (+161 more)
WoWICE/win/: wowice-VC10.sln  wowice-VC90 - All Projects.sln  wowice-VC90.sln  wowiceVC100 - All Projects.sln
WoWICE/win/VC/: wowice-logonserver.vcxproj  wowice-logonserver.vcxproj.filters  wowice-shared.vcxproj  wowice-world.vcxproj  wowice-world.vcxproj.filters
WoWICE/win/VC90/: collision_vc9.vcproj  collision_vc9.vcxproj  wowice-logonserver.vcproj  wowice-realmserver.vcproj  wowice-shared.vcproj  wowice-voicechat.vcproj  wowice-world.vcproj  wowice-world.vcxproj
trunk/WoWICE/: configure.ac  extract_svn_revision.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh
trunk/WoWICE/configs/: logon.conf  optional.conf  tips.txt  world.conf  wowice-logonserver.conf  wowice-optional.conf  wowice-realms.conf  wowice-world.conf
trunk/WoWICE/docs/: SMSG_AURA_UPDATE.txt
trunk/WoWICE/sql/: 2834_logon_structure.sql  2834_world_structure.sql  2845_character_structure.sql  3215_character_structure.sql  3237_world_structure.sql  3402_character_structure.sql
trunk/WoWICE/src/: Makefile.am
trunk/WoWICE/src/scripts/src/EventScripts/: DarkmoonFaire.cpp  DarkmoonFaireObjects.cpp  Event_Halloween.cpp  Event_WinterVeil.cpp  Makefile.am
trunk/WoWICE/src/scripts/src/QuestScripts/: Azuremyst_Isle.cpp  Druid.cpp  Eversong_Woods.cpp  Hellfire_Peninsula.cpp  Isle_of_QuelDanas.cpp  Makefile.am  Orgrimmar.cpp  Paladin.cpp  QuestGossip.cpp  QuestHooks.cpp  Quest_ArathiHighlands.cpp  Quest_Azshara.cpp  Quest_Azuremyst_Isle.cpp  Quest_BlastedLands.cpp  Quest_BoreanTundra.cpp  Quest_Dustwallow_Marsh.cpp  Quest_EversongWoods.cpp  Quest_Ghostlands.cpp  Quest_Howling_Fjord.cpp  Quest_Isle_of_QuelDanas.cpp  Quest_Mulgore.cpp  Quest_Netherstorm.cpp  Quest_Paladin.cpp  Quest_Silverpine_Forest.cpp  Quest_Stormwind.cpp  Quest_Tanaris.cpp  Quest_Teldrassil.cpp  Quest_ThousandNeedles.cpp  Quest_Winterspring.cpp  Quest_Zangarmarsh.cpp  Setup.cpp  Setup.h  Skettis.cpp  Terrokar_Forest.cpp
trunk/WoWICE/src/scripts/src/QuestScripts/EAS/: EasyFunctions.h
trunk/WoWICE/src/scripts/src/ServerStatusPlugin/: Makefile.am  PerfCounters.h  ServerStatusPlugin.cpp
(+1008 files in other folders)
