INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../wowice-shared
INCLUDES += -I$(srcdir)/../../../wowice-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libExtraScripts.la

libExtraScripts_la_SOURCES = L80etc.cpp \
	Insta80.cpp \
	Portals.cpp \
	PvPToken.cpp \
	Unstuck.cpp \
	Setup.cpp
