INCLUDES = -I$(top_srcdir)/src/wowice-logonserver \
   -I$(top_srcdir)/src/wowice-realmserver -I$(top_srcdir)/src/wowice-shared -I$(top_srcdir)/src/wowice-voicechat \
   -I$(top_srcdir)/src/wowice-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libMoonQuestScripts.la

libMoonQuestScripts_la_SOURCES = Setup.cpp \
Druid.cpp \
Paladin.cpp \
Mage.cpp \
Shadowmoon.cpp \
Hellfire_Peninsula.cpp \
Silverpine_Forest.cpp \
Nagrand.cpp \
BladeEdge_Mountains.cpp \
Terrokar_Forest.cpp \
Zangarmarsh.cpp \
Undercity.cpp \
Azuremyst_Isle.cpp \
The_Barrens.cpp \
Eastern_Plaguelands.cpp \
Eversong_Woods.cpp \
Ghostlands.cpp \
Orgrimmar.cpp \
Skettis.cpp \
Thousand_Needles.cpp \
Ungoro.cpp \
Isle_of_QuelDanas.cpp