INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../wowice-shared
INCLUDES += -I$(srcdir)/../../../wowice-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libServerStatusPlugin.la

libServerStatusPlugin_la_SOURCES = ServerStatusPlugin.cpp
